# mogemma

./: .coverage  .gitignore  LICENSE  Makefile  README.md  coverage.xml  pyproject.toml
.agent/: mojo-skill.md
.agent/code-styleguides/: mojo.md  python.md
.gemini/skills/mojo/: SKILL.md
.github/workflows/: ci.yml  publish.yml  test-build.yml
docs/: performance-baselines.md  release-runbook.md
scripts/: generate_ref_ops.py  validate.py
src/mo/: attention.mojo  cache.mojo  core.mojo  inference.mojo  layers.mojo  model.mojo  ops.mojo  pool.mojo  quant.mojo  sampling.mojo  verify_phase1.mojo  vision.mojo
src/mo/mogemma/: core.mojo  layers.mojo  model.mojo  ops.mojo
src/mo/tests/: test_accuracy.mojo  test_altup_contract.mojo  test_attention.mojo  test_cache.mojo  test_core_contract.py  test_inference.mojo  test_layers.mojo  test_model.mojo  test_mojo.py  test_multimodal_inference.mojo  test_nano_layers.mojo  test_ops.mojo  test_pool.mojo  test_quant.mojo  test_sampling.mojo  test_vision.mojo  test_vision_bridge.mojo
src/mogemma.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/py/: smoke_test.py
src/py/mogemma/: __init__.py  _typing.py  async_model.py  cli.py  config.py  convert.py  hub.py  loader.py  model.py  orbax_loader.py  telemetry.py  typing.py  vision_model.py
src/py/tests/: test_async.py  test_contracts_integration.py  test_convert.py  test_embeddings.py  test_gemma_model.py  test_hub.py  test_loader.py  test_mojo_core.py  test_mojo_namespace_layout.py  test_telemetry.py  test_validate_script.py  test_vision_model.py
tools/: benchmark.py  generate_ref_ops.py  hatch_build.py  repair-wheel-linux.sh  smoke_test.py  validate.py
