[project]
authors = [{ name = "Cody Fincher", email = "cody.fincher@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = []
description = "Python/Mojo interface for Google Gemma 3 using MAX Engine"
license = "MIT"
name = "mogemma"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.urls]
Issue = "https://github.com/cofin/mogemma/issues/"
Source = "https://github.com/cofin/mogemma"

[project.optional-dependencies]
embed = [
    "numpy>=1.26.0",
]
text = [
    "numpy>=1.26.0",
    "tokenizers>=0.15.0",
]
hub = [
    "huggingface-hub>=0.20.0",
]
telemetry = [
    "opentelemetry-api>=1.39.1",
]
all = [
    "numpy>=1.26.0",
    "tokenizers>=0.15.0",
    "huggingface-hub>=0.20.0",
    "opentelemetry-api>=1.39.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py/mogemma"]

[tool.hatch.build.hooks.custom]
path = "tools/hatch_build.py"

[tool.uv]
package = true
extra-index-url = ["https://modular.gateway.scarf.sh/simple/"]

[tool.pytest.ini_options]
testpaths = ["src/py/tests"]
pythonpath = ["src/py"]

[tool.ruff]
exclude = [".venv", "node_modules", "tmp", ".tmp"]
line-length = 120
src = ["src/py/mogemma", "src/py/tests"]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60
preview = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-safe-fixes = ["TC"]
fixable = ["ALL"]
ignore = ["COM812"]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["mogemma", "tests"]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tools/smoke_test.py" = ["T201", "INP001", "ANN201"]
"src/py/tests/test_*.py" = [
  "ARG001",
  "D100",
  "D101",
  "D102",
  "D103",
  "D107",
  "S101",
]

[tool.mypy]
exclude = ["tmp/", ".tmp/"]
packages = ["mogemma", "tests"]
python_version = "3.10"
strict = true

[tool.pyright]
include = ["src/py/mogemma", "src/py/tests"]
pythonVersion = "3.10"
venv = ".venv"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "build"},
]
build = ["bump-my-version>=0.31.1", "mojo>=0.26.1"]
lint = ["mypy>=1.13.0", "pyright>=1.1.386", "ruff>=0.14.14"]
test = [
    "numpy>=1.26.0",
    "tokenizers>=0.15.0",
    "huggingface-hub>=0.20.0",
    "opentelemetry-api>=1.39.1",
    "pytest>=9.0.2",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.bumpversion]
allow_dirty = true
commit = false
commit_args = "--no-verify"
current_version = "0.1.0"
ignore_missing_files = false
ignore_missing_version = false
message = "chore(release): bump to v{new_version}"
parse = """(?x)
    (?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)
    (-(?P<pre>alpha|beta|rc)\\.(?P<pre_n>\\d+))?
"""
regex = false
replace = "{new_version}"
search = "{current_version}"
serialize = ["{major}.{minor}.{patch}", "{major}.{minor}.{patch}-{pre}.{pre_n}"]
sign_tags = false
tag = false
tag_message = "chore(release): v{new_version}"
tag_name = "v{new_version}"

[tool.bumpversion.parts.pre]
first_value = "stable"
optional_value = "stable"
values = ["alpha", "beta", "rc", "stable"]

[tool.bumpversion.parts.pre_n]
first_value = "1"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
