[project]
authors = [{ name = "Cody Fincher", email = "cody.fincher@gmail.com" }]
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "obstore>=0.2.08",
    "numpy>=1.26.0",
    "safetensors>=0.4.5",
    "tensorstore>=0.1.78",
]
description = "Python/Mojo interface for Google Gemma 3"
license = { file = "LICENSE" }
name = "mogemma"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.1"

[project.urls]
Issue = "https://github.com/cofin/mogemma/issues/"
Source = "https://github.com/cofin/mogemma"

[project.optional-dependencies]
llm = [
    "sentencepiece>=0.2.0",
]
telemetry = [
    "opentelemetry-api>=1.35.0",
]


[build-system]
requires = ["hatchling", "hatch-mojo", "mojo>=0.26.1"]
build-backend = "hatchling.build"

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
build-frontend = "build[uv]"
skip = ["*-musllinux_*", "*-win*", "*_i686", "pp*"]
test-command = "pytest {project}/src/py/tests"
test-requires = ["pytest", "pytest-asyncio", "numpy", "sentencepiece", "obstore", "opentelemetry-api", "tomli"]

[tool.cibuildwheel.linux]
before-all = [
    "dnf install -y zstd unzip",
    "curl -sL https://conda.anaconda.org/conda-forge/linux-64/libstdcxx-14.3.0-h934c35e_18.conda -o /tmp/pkg.conda",
    "cd /tmp && unzip -o pkg.conda",
    "cd /tmp && zstd -d pkg-libstdcxx-14.3.0-h934c35e_18.tar.zst -o pkg.tar",
    "mkdir -p /tmp/out && tar xf /tmp/pkg.tar -C /tmp/out",
    "cp -a /tmp/out/lib/libstdc++.so* /lib64/ && ldconfig",
    "pip install uv",
]
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_34_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_34_aarch64"
repair-wheel-command = ""

[tool.cibuildwheel.macos]
repair-wheel-command = ""

[tool.hatch.build.targets.wheel]
packages = ["src/py/mogemma"]

[[tool.hatch.build.targets.wheel.hooks.mojo.jobs]]
name = "core"
input = "src/mo/mogemma/core.mojo"
emit = "python-extension"
module = "mogemma._core"
include-dirs = ["src/mo"]

[tool.pytest.ini_options]
testpaths = ["src/py/tests", "src/mo/tests"]
pythonpath = ["src/py"]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.ruff]
exclude = [".venv", "node_modules", "tmp", ".tmp"]
line-length = 120
src = ["src/py/mogemma", "src/py/tests", "src/mo/tests"]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60
preview = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
extend-safe-fixes = ["TC"]
fixable = ["ALL"]
ignore = ["COM812"]
select = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["mogemma", "tests"]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tools/smoke_test.py" = ["T201", "INP001", "ANN201"]
"src/py/tests/test_*.py" = [
  "ARG001",
  "D100",
  "D101",
  "D102",
  "D103",
  "D107",
  "S101",
  "SLF001",
]
"src/mo/tests/test_*.py" = [
  "ARG001",
  "D100",
  "D101",
  "D102",
  "D103",
  "D107",
  "S101",
]

[tool.mypy]
exclude = ["tmp/", ".tmp/"]
packages = ["mogemma", "tests"]
python_version = "3.10"
strict = true

[tool.pyright]
include = ["src/py/mogemma", "src/py/tests", "src/mo/tests"]
pythonVersion = "3.10"
venv = ".venv"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "build"},
]
build = ["bump-my-version>=0.31.1", "mojo>=0.26.1"]
lint = ["mypy>=1.13.0", "pyright>=1.1.386", "ruff>=0.14.14"]
test = [ 
    "obstore>=0.2.08", 
    "pytest>=9.0.2",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.3.0",
    "tomli>=2.0.0",
]

[tool.bumpversion]
allow_dirty = true
commit = false
commit_args = "--no-verify"
current_version = "0.1.1"
ignore_missing_files = false
ignore_missing_version = false
message = "chore(release): bump to v{new_version}"
parse = """(?x)
    (?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)
    (-(?P<pre>alpha|beta|rc)\\.(?P<pre_n>\\d+))?
"""
regex = false
replace = "{new_version}"
search = "{current_version}"
serialize = ["{major}.{minor}.{patch}", "{major}.{minor}.{patch}-{pre}.{pre_n}"]
sign_tags = false
tag = false
tag_message = "chore(release): v{new_version}"
tag_name = "v{new_version}"

[tool.bumpversion.parts.pre]
first_value = "stable"
optional_value = "stable"
values = ["alpha", "beta", "rc", "stable"]

[tool.bumpversion.parts.pre_n]
first_value = "1"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
